--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "noty": "^3.2.0-beta-deprecated",
+    "rollup-plugin-css-only": "^3.1.0",
     "uuid": "^9.0.0"
   }
 }
